dockerfile install oracle client & fastapi

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -22,6 +22,7 @@ RUN mv ${ORACLE_ZIP_INTERNAL_FOLDER} oracle
 
 FROM python:${PYTHON_VERSION}
 ARG USERNAME=backend
+ARG INSTANCE_TYPE=production
 ARG ORACLE_HOST
 ARG ORACLE_USER
 ARG ORACLE_PASS
@@ -29,6 +30,7 @@ ARG ORACLE_PORT
 ARG ORACLE_SID
 ARG ORACLE_CREDS_ARG
 
+ENV INSTANCE_TYPE=${INSTANCE_TYPE}
 ENV ORACLE_HOST=${ORACLE_HOST}
 ENV ORACLE_PORT=${ORACLE_PORT}
 ENV ORACLE_SID=${ORACLE_SID}
