--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flag-table-test-3",
+  "name": "geomean-flagger-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,8 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "REACT_APP_BACKEND_URL=\"http://localhost:8000\" react-scripts start",
+    "build": "REACT_APP_BACKEND_URL=\"http://geomean-flagger-backend-svc:8000\" react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
