--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,12 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "serve": "^13.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "REACT_APP_BACKEND_URL=\"http://localhost:8000\" react-scripts start",
-    "build": "REACT_APP_BACKEND_URL=\"http://geomean-flagger-backend-svc:8000\" react-scripts build",
+    "build": "REACT_APP_BACKEND_URL=\"http://localhost:8000\" react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
