--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -16,6 +16,11 @@ COPY . ./
 RUN npm run build
 
 FROM nginx:alpine
+# COPY --from=build /app/nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /app/build /usr/share/nginx/html
+RUN apk update \
+  && apk add curl \
+  && sed -i '/location \/ {$/a try_files \$uri \/index.html;' /etc/nginx/conf.d/default.conf
+
 EXPOSE 80 
-CMD ["nginx", "-c", "nginx.conf"]
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
