--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,10 +5,34 @@ upstream backend{
 }
 
 server {
-    listen 80;
+    listen       80;
+    server_name  localhost;
+
+    access_log  /var/log/nginx/host.access.log  main;
 
     location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+				try_files $uri /index.html;
+    }
+    location /fetch-data {
         # The following statement will proxy traffic to the upstream named Backend
-        proxy_pass http://backend;
+        proxy_pass http://backend/v1/fetch-data;
+    }
+
+    location /change-data {
+        # The following statement will proxy traffic to the upstream named Backend
+        proxy_pass http://backend/v1/change-data;
+        proxy_read_timeout 60s;
+
+        # May not need or want to set Host. Should default to the above hostname.
+        proxy_set_header          Host            $host;
+        proxy_set_header          X-Real-IP       $remote_addr;
+        proxy_set_header          X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
     }
 }
