--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -8,7 +8,7 @@ WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 
 # install app dependencies
-COPY package*.json ./
+COPY /geomean-ic50-flagger/frontend/package*.json ./
 RUN npm install 
 
 # add app & build
