--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -8,11 +8,11 @@ WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 
 # install app dependencies
-COPY /geomean-ic50-flagger/frontend/package*.json ./
-RUN npm install 
+COPY package*.json ./
+RUN npm install
 
 # add app & build
-COPY /geomean-ic50-flagger/frontend ./
+COPY . ./
 RUN npm run build
 
 FROM nginx:alpine
