--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,14 +6,18 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.10.9",
+    "@mui/joy": "^5.0.0-alpha.62",
     "@mui/material": "^5.6.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "plotly-mini": "file:vendor/plotly-mini.min.js",
+    "plotly.js": "^2.17.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-loading": "^2.0.3",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "serve": "^13.0.2",
