--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,33 +1,29 @@
 {
-  "name": "geomean-flagger-frontend",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.10.9",
-    "@mui/joy": "^5.0.0-alpha.62",
-    "@mui/material": "^5.6.2",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/joy": "^5.0.0-alpha.64",
+    "@mui/material": "^5.11.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.26.1",
-    "plotly-mini": "file:vendor/plotly-mini.min.js",
-    "plotly.js": "^2.17.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "axios": "^1.2.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
     "react-number-format": "^5.1.3",
     "react-plotly.js": "^2.6.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
-    "serve": "^13.0.2",
-    "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "REACT_APP_BACKEND_URL=\"http://localhost:8000\" react-scripts start",
-    "build": "REACT_APP_BACKEND_URL=\"http://geomean.backend.kinnate:8000\" react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
