re-add start/build script

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "REACT_APP_BACKEND_URL=\"http://localhost:8000\" react-scripts start",
+    "build": "REACT_APP_BACKEND_URL=\"http://geomean.backend.kinnate:8000\" react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
