--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,7 @@
     "react-number-format": "^5.1.3",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.8.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "REACT_APP_BACKEND_URL=\"http://localhost:8000\" react-scripts start",
@@ -44,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@cfaester/enzyme-adapter-react-18": "^0.6.0",
+    "enzyme": "^3.11.0"
   }
 }
