--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,22 +9,22 @@
     "@mui/joy": "^5.0.0-alpha.64",
     "@mui/material": "^5.11.6",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
     "react-number-format": "^5.1.3",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.8.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-test-renderer": "^18.2.0"
   },
   "scripts": {
     "start": "REACT_APP_BACKEND_URL=\"http://localhost:8000\" react-scripts start",
     "build": "REACT_APP_BACKEND_URL=\"http://geomean.backend.kinnate:8000\" react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "REACT_APP_BACKEND_URL=\"http://localhost:8000\" react-scripts test",
+    "eject": "react-scripts eject",
+    "coverage": "jest --coverage"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +46,17 @@
   },
   "devDependencies": {
     "@cfaester/enzyme-adapter-react-18": "^0.6.0",
-    "enzyme": "^3.11.0"
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.4.0",
+    "canvas": "^2.11.0",
+    "enzyme": "^3.11.0",
+    "jest": "^27.5.1",
+    "prettier": "^2.8.3",
+    "web-vitals": "^3.1.1"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
   }
 }
