add arg/envs for backend url, do try/catch build

--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,5 +1,10 @@
 # pull official base image
 FROM node:alpine as build
+ARG REACT_APP_BACKEND_URL
+ENV REACT_APP_BACKEND_URL=$REACT_APP_BACKEND_URL
+ENV GENERATE_SOURCEMAP=false
+
+RUN apk update && apk upgrade --no-cache
 
 # set working directory
 WORKDIR /app
@@ -13,6 +18,8 @@ RUN npm install
 
 # add app & build
 COPY /geomean-ic50-flagger/frontend ./
+
+RUN npm run build; exit 0
 RUN npm run build
 
 FROM nginx:alpine
