--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,11 @@
 # pull official base image
-FROM node:alpine
+FROM node:alpine as build
+ARG REACT_APP_BACKEND_URL
+ENV REACT_APP_BACKEND_URL=$REACT_APP_BACKEND_URL
+ENV GENERATE_SOURCEMAP=false
+ENV CI=true
 
+RUN apk update && apk upgrade --no-cache
 # set working directory
 WORKDIR /app
 
@@ -14,8 +19,15 @@ RUN npm install
 
 # add app & build
 COPY . ./
+RUN npm run test
 RUN npm run build
 
-EXPOSE 3000
-# start app
-CMD ["serve", "-s", "-n", "build"]
+
+FROM nginx:alpine
+COPY --from=build /app/build /usr/share/nginx/html
+RUN apk update \
+  && apk add curl \
+  && sed -i '/location \/ {$/a try_files \$uri \/index.html;' /etc/nginx/conf.d/default.conf
+
+EXPOSE 80 
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
