--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -4,7 +4,11 @@ ARG REACT_APP_BACKEND_URL
 ENV REACT_APP_BACKEND_URL=$REACT_APP_BACKEND_URL
 ENV GENERATE_SOURCEMAP=false
 
-RUN apk update && apk upgrade --no-cache
+RUN apk update && apk upgrade --no-cache && \
+		apk add --no-cache \
+		curl \
+		wget \
+		vim
 
 # set working directory
 WORKDIR /app
@@ -20,6 +24,7 @@ RUN npm install
 COPY /geomean-ic50-flagger/frontend ./
 
 RUN npm run test
+RUN npm run build; exit 0
 RUN npm run build
 
 FROM nginx:alpine
