CI=false, exit 0

--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -3,6 +3,7 @@ FROM node:alpine as build
 ARG REACT_APP_BACKEND_URL
 ENV REACT_APP_BACKEND_URL=$REACT_APP_BACKEND_URL
 ENV GENERATE_SOURCEMAP=false
+ENV CI=false
 
 RUN apk update && apk upgrade --no-cache && \
 		apk add --no-cache \
@@ -24,6 +25,7 @@ RUN npm install
 COPY /geomean-ic50-flagger/frontend ./
 
 RUN npm run test
+RUN npm run build; exit 0
 RUN npm run build
 
 FROM nginx:alpine
