add proper env vars

--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -20,21 +20,21 @@ RUN mv ${ORACLE_ZIP_INTERNAL_FOLDER} oracle
 FROM python:${PYTHON_VERSION}
 
 ARG USERNAME=jenkins
-ARG INSTANCE_TYPE=production
 ARG ORACLE_HOST
 ARG ORACLE_USER
 ARG ORACLE_PASS
 ARG ORACLE_PORT
 ARG ORACLE_SID
-ARG ORACLE_CREDS_ARG
+ARG DB_TYPE=PROD
+ARG ENV
 
-ENV INSTANCE_TYPE=${INSTANCE_TYPE}
+ENV DB_TYPE=${DB_TYPE}
+ENV ENV=${ENV}
 ENV ORACLE_HOST=${ORACLE_HOST}
 ENV ORACLE_PORT=${ORACLE_PORT}
 ENV ORACLE_SID=${ORACLE_SID}
 ENV ORACLE_PASS=${ORACLE_PASS}
 ENV ORACLE_USER=${ORACLE_USER}
-ENV ORACLE_CREDS_ARG=${ORACLE_CREDS_ARG}
 ENV HOME "/home/${USERNAME}"
 ENV ORACLE_HOME /opt/oracle
 ENV TNS_ADMIN ${ORACLE_HOME}/network/admin
