add redis env vars

--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -27,7 +27,11 @@ ARG ORACLE_PORT
 ARG ORACLE_SID
 ARG DB_TYPE=PROD
 ARG ENV
+ARG REDIS_HOST
+ARG REDIS_PASSWD
 
+ENV REDIS_HOST=${REDIS_HOST}
+ENV REDIS_PASSWD=${REDIS_PASSWD}
 ENV DB_TYPE=${DB_TYPE}
 ENV ENV=${ENV}
 ENV ORACLE_HOST=${ORACLE_HOST}
