--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -3,7 +3,7 @@ FROM node:alpine as build
 ARG REACT_APP_BACKEND_URL
 ENV REACT_APP_BACKEND_URL=$REACT_APP_BACKEND_URL
 ARG REACT_APP_FRONTEND_URL
-ENV REACT_APP_FRONTEND_URL=$REACT_APP_BACKEND_URL
+ENV REACT_APP_FRONTEND_URL=$REACT_APP_FRONTEND_URL
 ENV GENERATE_SOURCEMAP=false
 ENV CI=false
 
