use of redis args, upgrade to instantclient 19_18, remove sudo

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,11 +2,11 @@ ARG PYTHON_VERSION=3.9
 
 FROM debian:buster AS client
 
-ARG ORACLE_VERSION=19.17.0.0.0
-ARG OR_SHORT_VER=1917000
+ARG ORACLE_VERSION=19.18.0.0.0
+ARG OR_SHORT_VER=1918000
 
 WORKDIR /root
-ARG ORACLE_ZIP_INTERNAL_FOLDER=instantclient_19_17
+ARG ORACLE_ZIP_INTERNAL_FOLDER=instantclient_19_18
 ENV CLIENT_ZIP=instantclient-basiclite-linux.x64-${ORACLE_VERSION}dbru.zip
 ENV SDK_ZIP=instantclient-sdk-linux.x64-${ORACLE_VERSION}dbru.zip
 
@@ -32,7 +32,11 @@ ARG ORACLE_PORT
 ARG ORACLE_SID
 ARG DB_TYPE=PROD
 ARG ENV
+ARG REDIS_HOST
+ARG REDIS_PASSWD
 
+ENV REDIS_HOST=${REDIS_HOST}
+ENV REDIS_PASSWD=${REDIS_PASSWD}
 ENV DB_TYPE=${DB_TYPE}
 ENV ENV=${ENV}
 ENV ORACLE_HOST=${ORACLE_HOST}
@@ -60,8 +64,7 @@ RUN apt-get update \
 	&& echo ${ORACLE_HOME} > /etc/ld.so.conf.d/oracle.conf \
 	&& mkdir -p ${TNS_ADMIN} \
 	&& ldconfig \
-	&& rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
-	&& echo "${USERNAME}  ALL=(ALL) NOPASSWD:ALL" | tee "/etc/sudoers.d/${USERNAME}"
+	&& rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 WORKDIR ${HOME}
 USER ${USERNAME}
