--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -13,7 +13,11 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && apt-get -yq install unzip curl
 
-ADD insta* ./
+RUN curl -LJO "https://download.oracle.com/otn_software/linux/instantclient/${OR_SHORT_VER}/${CLIENT_ZIP}"\
+	&& curl -LJO "https://download.oracle.com/otn_software/linux/instantclient/${OR_SHORT_VER}/${SDK_ZIP}"
+
+# ADD insta* ./
+
 RUN unzip ${CLIENT_ZIP} && unzip ${SDK_ZIP}
 RUN mv ${ORACLE_ZIP_INTERNAL_FOLDER} oracle
 
@@ -64,5 +68,5 @@ RUN apt-get update \
 
 WORKDIR ${HOME}
 USER ${USERNAME}
-EXPOSE 8000
+EXPOSE 80
 CMD ["python", "main.py"]
