--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -7,8 +7,8 @@ ARG OR_SHORT_VER=1918000
 
 WORKDIR /tmp
 ARG ORACLE_ZIP_INTERNAL_FOLDER=instantclient_19_18
-ENV CLIENT_ZIP=instantclient-basiclite-linux.x64-${ORACLE_VERSION}.zip
-ENV SDK_ZIP=instantclient-sdk-linux.x64-${ORACLE_VERSION}.zip
+ENV CLIENT_ZIP=instantclient-basiclite-linux.x64-${ORACLE_VERSION}dbru.zip
+ENV SDK_ZIP=instantclient-sdk-linux.x64-${ORACLE_VERSION}dbru.zip
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && apt-get -yq install unzip curl
