backend url & version # env vars

--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -33,6 +33,8 @@ ARG DB_TYPE=PROD
 ARG ENV
 ARG REDIS_HOST
 ARG REDIS_PASSWD
+ARG VERSION_NUMBER
+ARG BACKEND_URL
 
 ENV REDIS_HOST=${REDIS_HOST}
 ENV REDIS_PASSWD=${REDIS_PASSWD}
@@ -43,6 +45,8 @@ ENV ORACLE_PORT=${ORACLE_PORT}
 ENV ORACLE_SID=${ORACLE_SID}
 ENV ORACLE_PASS=${ORACLE_PASS}
 ENV ORACLE_USER=${ORACLE_USER}
+ENV VERSION_NUMBER=${VERSION_NUMBER}
+ENV BACKEND_URL=${BACKEND_URL}
 ENV HOME "/home/${USERNAME}"
 ENV ORACLE_HOME /opt/oracle
 ENV TNS_ADMIN ${ORACLE_HOME}/network/admin
